# chaindigger

./: .gitignore  RAW_to_RGB_chaindigger.py  RAW_to_RGB_chaindigger_HQ.py  README.md  how_to_dl_chaindigger_data.txt  pyproject.toml
assets/: gps_data_000159_ChainDigger729_fl9mm-20240905_141821_860.raw
