[project]
name = "chaindigger"
version = "0.1.0"
description = "computer vision for chaindigger images"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "detectron2",
    "colour-demosaicing>=0.2.6",
    "imageio>=2.37.0",
    "ipympl>=0.9.7",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "opencv-python>=4.11.0.86",
    "scikit-image>=0.25.2",
    "scipy>=1.15.2",
    "torch>=2.7.0",
    "torchaudio>=2.7.0",
    "torchvision>=0.22.0",
]

[project.optional-dependencies]
build = ["torch", "setuptools"]
compile = ["detectron2"]

[tool.uv]
no-build-isolation-package = ["detectron2"]

[tool.uv.sources]
detectron2 = { git = "https://github.com/facebookresearch/detectron2.git" }

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
